@@ -11,7 +11,7 @@ dependencies {
 
   library("com.amazonaws:aws-lambda-java-core:1.0.0")
 
-  implementation("io.opentelemetry:opentelemetry-extension-aws")
+  implementation("io.opentelemetry.contrib:opentelemetry-aws-xray-propagator")
 
   // We do lightweight parsing of JSON to extract HTTP headers from requests for propagation.
   // This will be commonly needed even for users that don't use events, but luckily it's not too big.
@@ -28,4 +28,10 @@ dependencies {
 
   testImplementation(project(":instrumentation:aws-lambda:aws-lambda-core-1.0:testing"))
   testImplementation("uk.org.webcompere:system-stubs-jupiter")
+}
+
+tasks.withType<Test>().configureEach {
+  // required on jdk17
+  jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
+  jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
 }
