@@ -16,4 +16,15 @@ dependencies {
   // classes and packages to be imported. Versions 3.1.0+ work with the instrumentation.
   library("org.springframework:spring-context:3.1.0.RELEASE")
   testLibrary("org.springframework:spring-context:3.2.3.RELEASE")
+
+  latestDepTestLibrary("org.springframework:spring-context:5.+")
+}
+
+tasks.withType<Test>().configureEach {
+  // TODO run tests both with and without experimental span attributes
+  jvmArgs("-Dotel.instrumentation.spring-scheduling.experimental-span-attributes=true")
+
+  // required on jdk17
+  jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+  jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
 }
